--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -489,8 +489,12 @@ awt_java_source_files =	\
 java/awt/event/ActionEvent.java	\
 java/awt/event/ActionListener.java \
 java/awt/event/ComponentEvent.java \
-java/awt/event/KeyAdapter.java \
+java/awt/event/HierarchyBoundsAdapter.java \
+java/awt/event/HierarchyBoundsListener.java \
+java/awt/event/HierarchyEvent.java \
+java/awt/event/HierarchyListener.java \
 java/awt/event/InputEvent.java \
+java/awt/event/KeyAdapter.java \
 java/awt/event/KeyEvent.java \
 java/awt/event/KeyListener.java	\
 java/awt/event/TextEvent.java \
@@ -520,14 +524,25 @@ java/awt/event/ItemEvent.java \
 java/awt/event/InvocationEvent.java \
 java/awt/event/PaintEvent.java \
 java/awt/event/ContainerEvent.java \
+java/awt/AWTError.java \
 java/awt/AWTEvent.java \
+java/awt/AWTEventMulticaster.java \
 java/awt/BorderLayout.java \
+java/awt/CheckboxGroup.java \
+java/awt/ColorModel.java \
 java/awt/Component.java	\
+java/awt/ComponentOrientation.java \
 java/awt/Container.java	\
+java/awt/Cursor.java \
 java/awt/Dimension.java	\
 java/awt/Event.java \
+java/awt/EventDispatchThread.java \
+java/awt/EventQueue.java \
 java/awt/Font.java \
+java/awt/FontMetrics.java \
 java/awt/Frame.java \
+java/awt/GraphicsConfiguration.java \
+java/awt/Insets.java \
 java/awt/LayoutManager.java \
 java/awt/LayoutManager2.java \
 java/awt/Menu.java \
@@ -535,18 +550,45 @@ java/awt/MenuBar.java \
 java/awt/MenuComponent.java \
 java/awt/MenuContainer.java \
 java/awt/MenuItem.java \
+java/awt/MenuShortcut.java \
+java/awt/Panel.java \
 java/awt/Point.java \
-java/awt/AWTError.java \
+java/awt/PopupMenu.java \
 java/awt/Shape.java \
 java/awt/TextArea.java \
 java/awt/TextComponent.java \
 java/awt/Toolkit.java \
 java/awt/Window.java \
+java/awt/image/ImageConsumer.java \
+java/awt/image/ImageObserver.java \
+java/awt/image/ImageProducer.java \
 java/awt/geom/Dimension2D.java \
 java/awt/geom/Point2D.java \
+java/awt/peer/ButtonPeer.java \
+java/awt/peer/CanvasPeer.java \
+java/awt/peer/CheckboxMenuItemPeer.java \
+java/awt/peer/CheckboxPeer.java \
+java/awt/peer/ChoicePeer.java \
 java/awt/peer/ComponentPeer.java \
 java/awt/peer/ContainerPeer.java \
+java/awt/peer/DialogPeer.java \
+java/awt/peer/FileDialogPeer.java \
+java/awt/peer/FontPeer.java \
 java/awt/peer/FramePeer.java \
+java/awt/peer/LabelPeer.java \
+java/awt/peer/LightweightPeer.java \
+java/awt/peer/ListPeer.java \
+java/awt/peer/MenuBarPeer.java \
+java/awt/peer/MenuComponentPeer.java \
+java/awt/peer/MenuItemPeer.java \
+java/awt/peer/MenuPeer.java \
+java/awt/peer/PanelPeer.java \
+java/awt/peer/PopupMenuPeer.java \
+java/awt/peer/ScrollPanePeer.java \
+java/awt/peer/ScrollbarPeer.java \
+java/awt/peer/TextAreaPeer.java \
+java/awt/peer/TextComponentPeer.java \
+java/awt/peer/TextFieldPeer.java \
 java/awt/peer/WindowPeer.java \
 java/awt/Adjustable.java \
 java/awt/Color.java \
