--- a/gcc/config.in
+++ b/gcc/config.in
@@ -313,7 +313,7 @@
 /* Define if printf supports %p. */
 #undef HAVE_PRINTF_PTR
 
-/* Define if mmap can get us zeroed pages from /dev/zero. */
+/* Define if mmap can get us zeroed pages without MAP_FIXED. */
 #undef HAVE_MMAP_ANYWHERE
 
 /* Define if read-only mmap of a plain file works. */
