* gcc_update (files_and_dependencies): Remove generated YACC files.
	* c-parse.c: Remove.
	* c-parse.h: Likewise.
	* c-parse.y: Likewise.
	* objc/objc-parse.c: Likewise.
	* objc/objc-pasre.y: Likewise.

	* Makefile.in ($(PARSE_H)): Depend directly on parse.y.
	* parse.c: Remove.
	* parse.h: Likewise.

	* parse-scan.c: Remove.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34982 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/Makefile.in
+++ b/gcc/cp/Makefile.in
@@ -220,8 +220,7 @@ parse.o : $(PARSE_C) $(CXX_TREE_H) $(srcdir)/../flags.h lex.h \
   `echo $(PARSE_C) | sed 's,^\./,,'`
 
 CONFLICTS = expect 33 shift/reduce conflicts and 58 reduce/reduce conflicts.
-$(PARSE_H) : $(PARSE_C)
-$(PARSE_C) : $(srcdir)/parse.y
+$(PARSE_H) $(PARSE_C) : $(srcdir)/parse.y
 	@echo $(CONFLICTS)
 	cd $(srcdir); $(BISON) $(BISONFLAGS) -d -o parse.c parse.y
 	cd $(srcdir); grep '^#define[ 	]*YYEMPTY' parse.c >>parse.h
