* c-decl.c (define_label): Warn about identifier conflicts with 	labels in traditional C.
	* c-parse.in (unop +): Warn about the unary plus operator for
	traditional C.

	* c-typeck.c (store_init_value): Warn about automatic aggregate
	initialization for traditional C.

	* invoke.texi (-Wtraditional): Document new warnings.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@34997 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -411,7 +411,12 @@ unop:     '&'
 	| '-'
 		{ $$ = NEGATE_EXPR; }
 	| '+'
-		{ $$ = CONVERT_EXPR; }
+		{ $$ = CONVERT_EXPR;
+ifc
+  if (warn_traditional)
+    warning ("traditional C rejects the unary plus operator");
+end ifc
+		}
 	| PLUSPLUS
 		{ $$ = PREINCREMENT_EXPR; }
 	| MINUSMINUS
