* configure.in (vax-*-openbsd):  Change to new style configuration,         add collect2/float_format information.         * configure:  Rebuilt.         * config/vax/openbsd1.h:  New.         * config/vax/openbsd.h:  New.         * config/vax/t-openbsd:  New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35079 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -3648,6 +3648,10 @@ changequote([,])dnl
 		;;
 	vax-*-openbsd*)
 		tmake_file="${tmake_file} vax/t-openbsd"
+		tm_file="vax/vax.h vax/openbsd1.h openbsd.h ${tm_file}"
+		xm_file="xm-openbsd.h vax/xm-vax.h"
+		float_format=vax
+		use_collect2=yes
 		;;
 	vax-*-ultrix*)			# vaxen running ultrix
 		tm_file="${tm_file} vax/ultrix.h"
