* Makefile.in (clean): Remove libgcc directory.
        * configure.in (-Wno-long-long check): Use higher-level macros.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35100 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2155,6 +2155,7 @@ mostlyclean: $(INTL_MOSTLYCLEAN) lang.mostlyclean
 INTL_CLEAN = intl.clean
 clean: mostlyclean $(INTL_CLEAN) lang.clean
 	-rm -f libgcc.a
+	-rm -rf libgcc
 	-rm -f *.dvi
 	-rm -f */*.dvi
 	-if [ -f md.pre-cpp ]; then \
