2000-07-12  Andrew Haley  <aph@cygnus.com>
        * configure.in (host_makefile_frag): Use mh-ia64pic on IA-64 hosts.
        (target_makefile_frag): Use mt-ia64pic on IA-64 targets.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35174 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -306,6 +306,9 @@ if [ x${shared} = xyes ]; then
     i[3456]86-*-*)
       host_makefile_frag="${host_makefile_frag} config/mh-x86pic"
       ;;
+    ia64-*-*)
+      host_makefile_frag="${host_makefile_frag} config/mh-ia64pic"
+      ;;
     sparc64-*-*)
       host_makefile_frag="${host_makefile_frag} config/mh-sparcpic"
       ;;
@@ -1023,6 +1026,9 @@ if [ x${shared} = xyes ]; then
       ;;
     i[3456]86-*)
       target_makefile_frag="${target_makefile_frag} config/mt-x86pic"
+      ;;
+    ia64-*)
+      target_makefile_frag="${target_makefile_frag} config/mt-ia64pic"
       ;;
     powerpc*-*-aix*)
       # We don't want -fPIC on AIX.
