* Makefile.in (xexit.o): Add dependency for config.h in xexit.c.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35180 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/Makefile.in
+++ b/libiberty/Makefile.in
@@ -287,7 +287,7 @@ splay-tree.o: config.h $(INCDIR)/libiberty.h $(INCDIR)/splay-tree.h $(INCDIR)/an
 strerror.o: config.h $(INCDIR)/libiberty.h
 strsignal.o: config.h $(INCDIR)/libiberty.h
 xatexit.o: $(INCDIR)/libiberty.h
-xexit.o: $(INCDIR)/libiberty.h
+xexit.o: config.h $(INCDIR)/libiberty.h
 xmalloc.o: config.h $(INCDIR)/libiberty.h
 xmemdup.o: config.h $(INCDIR)/libiberty.h
 xstrdup.o: config.h $(INCDIR)/libiberty.h
