* (vasprintf.o): Add dependency for config.h in vasprintf.c.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35181 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/Makefile.in
+++ b/libiberty/Makefile.in
@@ -286,6 +286,7 @@ spaces.o: $(INCDIR)/libiberty.h
 splay-tree.o: config.h $(INCDIR)/libiberty.h $(INCDIR)/splay-tree.h $(INCDIR)/ansidecl.h
 strerror.o: config.h $(INCDIR)/libiberty.h
 strsignal.o: config.h $(INCDIR)/libiberty.h
+vasprintf.o: config.h
 xatexit.o: $(INCDIR)/libiberty.h
 xexit.o: config.h $(INCDIR)/libiberty.h
 xmalloc.o: config.h $(INCDIR)/libiberty.h
