* Makefile.in: Rebuilt. 	* Makefile.am (awt_java_source_files): Updated for new files. 	* java/awt/Adjustable.java (HORIZONTAL, VERTICAL): Set values. 	* java/awt/Label.java: New file. 	* java/awt/Rectangle.java (Rectangle): Extend Rectangle2D. 	(createIntersection, createUnion, getBounds2D): New methods. 	* java/awt/Scrollbar.java: New file. 	* java/awt/Shape.java: Updated to 1.2. 	* java/awt/geom/AffineTransform.java: New file. 	* java/awt/geom/Ellipse2D.java: New file. 	* java/awt/geom/NoninvertibleTransformException.java: New file. 	* java/awt/geom/PathIterator.java: New file. 	* java/awt/geom/Rectangle2D.java: New file. 	* java/awt/geom/RectangularShape.java: New file. 	* java/awt/geom/Point2D.java (Double, Float): New inner classes. 	* java/awt/geom/IllegalPathStateException.java: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35195 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -486,49 +486,15 @@ gnu/gcj/convert/UnicodeToBytes.java
 special_java_source_files = java/lang/Class.java java/lang/Object.java
 
 awt_java_source_files =	\
-java/awt/event/ActionEvent.java	\
-java/awt/event/ActionListener.java \
-java/awt/event/ComponentEvent.java \
-java/awt/event/HierarchyBoundsAdapter.java \
-java/awt/event/HierarchyBoundsListener.java \
-java/awt/event/HierarchyEvent.java \
-java/awt/event/HierarchyListener.java \
-java/awt/event/InputEvent.java \
-java/awt/event/KeyAdapter.java \
-java/awt/event/KeyEvent.java \
-java/awt/event/KeyListener.java	\
-java/awt/event/TextEvent.java \
-java/awt/event/TextListener.java \
-java/awt/event/WindowAdapter.java \
-java/awt/event/WindowEvent.java	\
-java/awt/event/WindowListener.java \
-java/awt/event/InputMethodListener.java	\
-java/awt/event/ComponentListener.java \
-java/awt/event/AdjustmentListener.java \
-java/awt/event/AWTEventListener.java \
-java/awt/event/FocusListener.java \
-java/awt/event/AdjustmentEvent.java \
-java/awt/event/ItemListener.java \
-java/awt/event/ContainerListener.java \
-java/awt/event/MouseListener.java \
-java/awt/event/MouseMotionListener.java	\
-java/awt/event/ComponentAdapter.java \
-java/awt/event/ContainerAdapter.java \
-java/awt/event/FocusAdapter.java \
-java/awt/event/MouseAdapter.java \
-java/awt/event/MouseMotionAdapter.java \
-java/awt/event/FocusEvent.java \
-java/awt/event/InputMethodEvent.java \
-java/awt/event/MouseEvent.java \
-java/awt/event/ItemEvent.java \
-java/awt/event/InvocationEvent.java \
-java/awt/event/PaintEvent.java \
-java/awt/event/ContainerEvent.java \
 java/awt/AWTError.java \
 java/awt/AWTEvent.java \
 java/awt/AWTEventMulticaster.java \
+java/awt/AWTException.java \
+java/awt/ActiveEvent.java \
+java/awt/Adjustable.java \
 java/awt/BorderLayout.java \
 java/awt/CheckboxGroup.java \
+java/awt/Color.java \
 java/awt/ColorModel.java \
 java/awt/Component.java	\
 java/awt/ComponentOrientation.java \
@@ -541,8 +507,13 @@ java/awt/EventQueue.java \
 java/awt/Font.java \
 java/awt/FontMetrics.java \
 java/awt/Frame.java \
+java/awt/Graphics.java \
 java/awt/GraphicsConfiguration.java \
+java/awt/IllegalComponentStateException.java \
+java/awt/Image.java \
 java/awt/Insets.java \
+java/awt/ItemSelectable.java \
+java/awt/Label.java \
 java/awt/LayoutManager.java \
 java/awt/LayoutManager2.java \
 java/awt/Menu.java \
@@ -551,23 +522,73 @@ java/awt/MenuComponent.java \
 java/awt/MenuContainer.java \
 java/awt/MenuItem.java \
 java/awt/MenuShortcut.java \
+java/awt/Paint.java \
+java/awt/PaintContext.java \
 java/awt/Panel.java \
 java/awt/Point.java \
-java/awt/PopupMenu.java \
+java/awt/PopupMenu.java	\
+java/awt/Rectangle.java	\
+java/awt/Scrollbar.java	\
 java/awt/Shape.java \
 java/awt/TextArea.java \
 java/awt/TextComponent.java \
 java/awt/Toolkit.java \
+java/awt/Transparency.java \
 java/awt/Window.java \
+java/awt/event/AWTEventListener.java \
+java/awt/event/ActionEvent.java	\
+java/awt/event/ActionListener.java \
+java/awt/event/AdjustmentEvent.java \
+java/awt/event/AdjustmentListener.java \
+java/awt/event/ComponentAdapter.java \
+java/awt/event/ComponentEvent.java \
+java/awt/event/ComponentListener.java \
+java/awt/event/ContainerAdapter.java \
+java/awt/event/ContainerEvent.java \
+java/awt/event/ContainerListener.java \
+java/awt/event/FocusAdapter.java \
+java/awt/event/FocusEvent.java \
+java/awt/event/FocusListener.java \
+java/awt/event/HierarchyBoundsAdapter.java \
+java/awt/event/HierarchyBoundsListener.java \
+java/awt/event/HierarchyEvent.java \
+java/awt/event/HierarchyListener.java \
+java/awt/event/InputEvent.java \
+java/awt/event/InputMethodEvent.java \
+java/awt/event/InputMethodListener.java	\
+java/awt/event/InvocationEvent.java \
+java/awt/event/ItemEvent.java \
+java/awt/event/ItemListener.java \
+java/awt/event/KeyAdapter.java \
+java/awt/event/KeyEvent.java \
+java/awt/event/KeyListener.java	\
+java/awt/event/MouseAdapter.java \
+java/awt/event/MouseEvent.java \
+java/awt/event/MouseListener.java \
+java/awt/event/MouseMotionAdapter.java \
+java/awt/event/MouseMotionListener.java	\
+java/awt/event/PaintEvent.java \
+java/awt/event/TextEvent.java \
+java/awt/event/TextListener.java \
+java/awt/event/WindowAdapter.java \
+java/awt/event/WindowEvent.java	\
+java/awt/event/WindowListener.java \
+java/awt/geom/AffineTransform.java \
+java/awt/geom/Dimension2D.java \
+java/awt/geom/Ellipse2D.java \
+java/awt/geom/IllegalPathStateException.java \
+java/awt/geom/NoninvertibleTransformException.java \
+java/awt/geom/PathIterator.java	\
+java/awt/geom/Point2D.java \
+java/awt/geom/Rectangle2D.java \
+java/awt/geom/RectangularShape.java \
 java/awt/image/ImageConsumer.java \
 java/awt/image/ImageObserver.java \
 java/awt/image/ImageProducer.java \
-java/awt/geom/Dimension2D.java \
-java/awt/geom/Point2D.java \
 java/awt/peer/ButtonPeer.java \
 java/awt/peer/CanvasPeer.java \
-java/awt/peer/CheckboxMenuItemPeer.java \
-java/awt/peer/CheckboxPeer.java \
+java/awt/peer/CheckboxMenuItemPeer.java	\
+java/awt/peer/CheckboxPeer.java	\
 java/awt/peer/ChoicePeer.java \
 java/awt/peer/ComponentPeer.java \
 java/awt/peer/ContainerPeer.java \
@@ -580,28 +601,16 @@ java/awt/peer/LightweightPeer.java \
 java/awt/peer/ListPeer.java \
 java/awt/peer/MenuBarPeer.java \
 java/awt/peer/MenuComponentPeer.java \
-java/awt/peer/MenuItemPeer.java \
+java/awt/peer/MenuItemPeer.java	\
 java/awt/peer/MenuPeer.java \
 java/awt/peer/PanelPeer.java \
 java/awt/peer/PopupMenuPeer.java \
 java/awt/peer/ScrollPanePeer.java \
 java/awt/peer/ScrollbarPeer.java \
-java/awt/peer/TextAreaPeer.java \
+java/awt/peer/TextAreaPeer.java	\
 java/awt/peer/TextComponentPeer.java \
 java/awt/peer/TextFieldPeer.java \
-java/awt/peer/WindowPeer.java \
-java/awt/Adjustable.java \
-java/awt/Color.java \
-java/awt/Graphics.java \
-java/awt/Image.java \
-java/awt/Paint.java \
-java/awt/PaintContext.java \
-java/awt/Transparency.java \
-java/awt/ItemSelectable.java \
-java/awt/AWTException.java \
-java/awt/ActiveEvent.java \
-java/awt/Rectangle.java	\
-java/awt/IllegalComponentStateException.java
+java/awt/peer/WindowPeer.java
 
 ## Java files which are created by configure and thus are in the build
 ## directory.
