* configure.in (AC_CHECK_HEADERS): Add limits.h.         * configure, config.in: Regenerate.         * sort.c: Portably #include <limits.h> and/or <sys/param.h>.         * strtol.c, strtoul.c: #include "config.h". Portably #include         <limits.h> and/or <sys/param.h>.         * Makefile.in (strtol.o, strtoul.o): Update dependencies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35211 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/config.in
+++ b/libiberty/config.in
@@ -202,6 +202,9 @@
 /* Define if you have the <fcntl.h> header file.  */
 #undef HAVE_FCNTL_H
 
+/* Define if you have the <limits.h> header file.  */
+#undef HAVE_LIMITS_H
+
 /* Define if you have the <stdlib.h> header file.  */
 #undef HAVE_STDLIB_H
 
