* configure.in: Use the same cache file for all target libs. * config-ml.in: But different cache files per multilib variant.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35219 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -1216,7 +1216,7 @@ else
   gxx_include_dir=${gxx_include_dir}
 fi
 
-targargs="--host=${target_alias} --build=${build_alias} ${targargs}"
+targargs="--cache-file=../config.cache --host=${target_alias} --build=${build_alias} ${targargs}"
 sed -e "s:^TARGET_CONFIGDIRS[ 	]*=.*$:TARGET_CONFIGDIRS = ${target_configdirs}:" \
     -e "s%^CONFIG_ARGUMENTS[ 	]*=.*$%CONFIG_ARGUMENTS = ${targargs}%" \
     -e "s%^TARGET_SUBDIR[ 	]*=.*$%TARGET_SUBDIR = ${target_subdir}%" \
